preference api use spring aop to provide interface implementation